@@ -35,6 +35,7 @@ jobs:
   windows:
     name: ${{ matrix.target.name }}
     runs-on: ${{ matrix.target.runs-on }}
+    container: ${{ matrix.target.container }}
     timeout-minutes: 20
 
     env:
@@ -43,9 +44,8 @@ jobs:
     strategy:
       matrix:
         target:
-          - name: windows-2022
+          - name: windows-2022-x64
             runs-on: windows-2022
-            arch: x64
 
     steps:
       - name: Checkout
@@ -97,7 +97,7 @@ jobs:
         with:
           use_github: ${{ env.UPLOAD_TO_GITHUB }}
           use_gdrive: ${{ env.UPLOAD_TO_GDRIVE }}
-          github-target-filename: "${{ env.SYNERGY_PACKAGE_PREFIX }}-windows-${{ matrix.target.name }}"
+          github-target-filename: "${{ env.SYNERGY_PACKAGE_PREFIX }}-${{ matrix.target.name }}"
           gdrive-target-base-dir: ${{ vars.GDRIVE_TARGET_BASE_DIR }}
           gdrive-secret-key: ${{ secrets.GOOGLE_DRIVE_KEY }}
           gdrive-parent-folder-id: ${{ secrets.GOOGLE_DRIVE_TECH_DRIVE }}
@@ -175,8 +175,8 @@ jobs:
   linux:
     name: linux-${{ matrix.distro.name }}
     runs-on: ${{ matrix.distro.runs-on }}
-    timeout-minutes: 10
     container: ${{ matrix.distro.container }}
+    timeout-minutes: 10
 
     env:
       # Prevent apt prompting for input.
@@ -185,50 +185,60 @@ jobs:
     strategy:
       matrix:
         distro:
-          - name: ubuntu-24.04
+          - name: ubuntu-24.04-amd64
             container: ubuntu:24.04
             runs-on: ubuntu-latest
             install-deps-apt: true
             extra-packages: true
 
-          - name: ubuntu-22.04
+          - name: ubuntu-22.04-amd64
             container: ubuntu:22.04
             runs-on: ubuntu-latest
             install-deps-apt: true
 
-          - name: debian-12
+          - name: debian-12-arm64
+            container: arm64v8/debian:12
+            runs-on: buildjet-4vcpu-ubuntu-2204-arm
+            install-deps-apt: true
+
+          - name: debian-12-amd64
             container: debian:12
             runs-on: ubuntu-latest
             install-deps-apt: true
 
-          - name: debian-11
+          - name: debian-11-amd64
             container: debian:11
             runs-on: ubuntu-latest
             install-deps-apt: true
             legacy-cmake: true
 
-          - name: fedora-40
+          - name: fedora-40-arm64
+            container: arm64v8/fedora:40
+            runs-on: buildjet-4vcpu-ubuntu-2204-arm
+            install-deps-dnf: true
+
+          - name: fedora-40-amd64
             container: fedora:40
             runs-on: ubuntu-latest
             install-deps-dnf: true
 
-          - name: fedora-39
+          - name: fedora-39-amd64
             container: fedora:39
             runs-on: ubuntu-latest
             install-deps-dnf: true
 
-          - name: opensuse
+          - name: opensuse-amd64
             container: opensuse/tumbleweed:latest
             runs-on: ubuntu-latest
             install-deps-zypper: true
 
-          - name: arch
+          - name: arch-amd64
             container: archlinux:latest
             runs-on: ubuntu-latest
             install-deps-pacman: true
             package-user: build
 
-          - name: manjaro
+          - name: manjaro-amd64
             container: manjarolinux/base:latest
             runs-on: ubuntu-latest
             install-deps-pacman: true
