@@ -2,6 +2,7 @@
 
 import platform
 import lib.env as env
+from lib.linux import PackageType
 
 env_file = ".env"
 default_package_prefix = "synergy"
@@ -47,6 +48,11 @@ def get_filename_base(version, use_linux_distro=True):
 
         return f"{package_base}-{distro}-{machine}-{version}"
     else:
+        # some windows users get confused by 'amd64' and think it's 'arm64',
+        # so we'll use intel's 'x64' branding (even though it's wrong).
+        if machine == "amd64":
+            machine = "x64"
+
         return f"{package_base}-{os}-{machine}-{version}"
 
 
@@ -67,12 +73,12 @@ def linux_package(filename_base, version):
 
     extra_packages = env.get_env_bool("LINUX_EXTRA_PACKAGES", False)
 
-    linux.package(filename_base)
+    linux.package(filename_base, PackageType.DISTRO)
 
     if extra_packages:
         filename_base = get_filename_base(version, use_linux_distro=False)
-        linux.package(filename_base, build_tgz=True)
-        linux.package(filename_base, build_stgz=True)
+        linux.package(filename_base, PackageType.TGZ)
+        linux.package(filename_base, PackageType.STGZ)
 
 
 if __name__ == "__main__":
